--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,3 +1,12 @@
+body {
+    color: #ffffff;
+    background-color: #000000;
+    margin: 0px;
+    overflow: hidden;
+    font-family: Arial;
+    font-size: 14px;
+}
+
 #stats {
     position: absolute;
     left: 0;
@@ -13,7 +22,8 @@
     background-color: #009688;
     text-align: center;
     font-size: 25px;
-    visibility: hidden;
+    color: #fff;
+    display: none;
 }
 
 #promt.info {
@@ -62,4 +72,17 @@
     width: 50%;
     height: 100%;
     border-radius: 50% 50% 0 0;
+}
+
+#loading {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    margin: auto;
+    width: 100%;
+    height: 100%;
+    background-color: #fff;
+    display: none;
 }
