--- a/src/css/index.css
+++ b/src/css/index.css
@@ -74,6 +74,22 @@ body {
     border-radius: 50% 50% 0 0;
 }
 
+#identity {
+    position: absolute;
+    padding: 10px;
+    border-radius: 40px;
+    background-color: #009688;
+    font-size: 30px;
+    display: none;
+}
+
+#identity>img {
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    vertical-align: middle;
+}
+
 #loading {
     position: absolute;
     top: 0;
@@ -84,7 +100,7 @@ body {
     width: 100%;
     height: 100%;
     background-color: #fff;
-    display: none;
+    display: block;
 }
 
 @keyframes load-circle {
@@ -113,4 +129,8 @@ body {
 
 #loading circle:nth-child(3) {
     animation-delay: 0.75s;
+}
+
+#music {
+    display: none;
 }
