--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,10 +1,13 @@
-body {
-    color: #ffffff;
-    background-color: #000000;
-    margin: 0px;
-    overflow: hidden;
-    font-family: Arial;
-    font-size: 14px;
+html, body {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+#game {
+    width: 100%;
+    height: 100%;
 }
 
 #stats {
