--- a/src/css/index.css
+++ b/src/css/index.css
@@ -323,24 +323,200 @@ ul {
     display: none;
 }
 
-.msg.info {
+/*.msg.info {*/
+.info {
     background-color: #009688;
 }
 
-.msg.danger {
+/*.msg.danger {*/
+.danger {
     background-color: #ff6550;
 }
 
+.animated {
+  -webkit-animation-duration: 1s;
+  animation-duration: 1s;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+}
+
+@-webkit-keyframes flipInY {
+  from {
+    -webkit-transform: perspective(400px) rotateY(90deg);
+    transform: perspective(400px) rotateY(90deg);
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in;
+    opacity: 0;
+  }
+
+  40% {
+    -webkit-transform: perspective(400px) rotateY(-20deg);
+    transform: perspective(400px) rotateY(-20deg);
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in;
+  }
+
+  60% {
+    -webkit-transform: perspective(400px) rotateY(10deg);
+    transform: perspective(400px) rotateY(10deg);
+    opacity: 1;
+  }
+
+  80% {
+    -webkit-transform: perspective(400px) rotateY(-5deg);
+    transform: perspective(400px) rotateY(-5deg);
+  }
+
+  to {
+    -webkit-transform: perspective(400px);
+    transform: perspective(400px);
+  }
+}
+
+@keyframes flipInY {
+  from {
+    -webkit-transform: perspective(400px) rotateY(90deg);
+    transform: perspective(400px) rotateY(90deg);
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in;
+    opacity: 0;
+  }
+
+  40% {
+    -webkit-transform: perspective(400px) rotateY(-20deg);
+    transform: perspective(400px) rotateY(-20deg);
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in;
+  }
+
+  60% {
+    -webkit-transform: perspective(400px) rotateY(10deg);
+    transform: perspective(400px) rotateY(10deg);
+    opacity: 1;
+  }
+
+  80% {
+    -webkit-transform: perspective(400px) rotateY(-5deg);
+    transform: perspective(400px) rotateY(-5deg);
+  }
+
+  to {
+    -webkit-transform: perspective(400px);
+    transform: perspective(400px);
+  }
+}
+
+.flipInY {
+  -webkit-backface-visibility: visible !important;
+  backface-visibility: visible !important;
+  -webkit-animation-name: flipInY;
+  animation-name: flipInY;
+}
+
 #promt {
-    width: 50%;
-    height: 50%;
+    width: 20%;
+    height: 20%;
     margin: auto;
     position: absolute;
     left: 0;
     right: 0;
-    top: 50%;
-    transform: translateY(-50%);
+    top: 0;
+    bottom: 0;
+    border-radius: 20px;
 }
+
+/* rotating box */
+
+@keyframes rolling {
+    to {
+        transform: rotate3d(1, 1, 1, 360deg) translateZ(-25px);
+        -webkit-transform: rotate3d(1, 1, 1, 360deg) translateZ(-25px);
+    }
+}
+
+@-webkit-keyframes rolling {
+    to {
+        transform: rotate3d(1, 1, 1, 360deg) translateZ(-25px);
+        -webkit-transform: rotate3d(1, 1, 1, 360deg) translateZ(-25px);
+    }
+}
+.contain {
+    width: 50px;
+    height: 50px;
+    margin: auto;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    border-radius: 20px;
+
+    perspective: 400px;
+    -webkit-perspective: 400px;
+}
+
+.box {
+    position: relative;
+    animation-name: rolling;
+    -webkit-animation-name: rolling;
+    animation-duration: 10s;
+    -webkit-animation-duration: 10s;
+    animation-iteration-count: infinite;
+
+    transform-style: preserve-3d;
+}
+
+.face {
+    width: 50px;
+    height: 50px;
+    position: absolute;
+
+    background-color: #F9F9F8;
+
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+
+}
+
+.face:nth-child(1) {
+    background-color: #F9F9F8;
+    transform: translateZ(25px);
+    -webkit-transform: translateZ(25px);
+}
+.face:nth-child(2) {
+    background-color: #868FBF;
+    transform: rotateX(180deg) translateZ(25px);
+    -webkit-transform: rotateX(180deg) translateZ(25px);
+}
+.face:nth-child(3) {
+    background-color: #59B2CE;
+    transform: rotateY(-90deg) translateZ(25px);
+    -webkit-transform: rotateY(-90deg) translateZ(25px);
+}
+.face:nth-child(4) {
+    background-color: #CE2535;
+    transform: rotateY(90deg) translateZ(25px);
+    -webkit-transform: rotateY(90deg) translateZ(25px);
+}
+.face:nth-child(5) {
+    background-color: #D79F52;
+    transform: rotateX(90deg) translateZ(25px);
+    -webkit-transform: rotateX(90deg) translateZ(25px);
+}
+.face:nth-child(6) {
+    background-color: #EFBCB6;
+    transform: rotateX(-90deg) translateZ(25px);
+    -webkit-transform: rotateX(-90deg) translateZ(25px);
+}
+
+
+.box .face>img {
+    width: 100%;
+    height: 100%;
+}
+
+
+
 
 /* identity */
 
