--- a/src/css/index.css
+++ b/src/css/index.css
@@ -425,50 +425,59 @@ ul {
     border-radius: 20px;
 }
 
-/* rotating box */
+/* rolling box */
 
 @keyframes rolling {
     to {
-        transform: rotate3d(1, 1, 1, 360deg) translateZ(-25px);
-        -webkit-transform: rotate3d(1, 1, 1, 360deg) translateZ(-25px);
+        transform: rotate3d(1, 1, 1, 360deg);
+        -webkit-transform: rotate3d(1, 1, 1, 360deg);
     }
 }
 
 @-webkit-keyframes rolling {
     to {
-        transform: rotate3d(1, 1, 1, 360deg) translateZ(-25px);
-        -webkit-transform: rotate3d(1, 1, 1, 360deg) translateZ(-25px);
+        transform: rotate3d(1, 1, 1, 360deg);
+        -webkit-transform: rotate3d(1, 1, 1, 360deg);
     }
 }
+
 .contain {
-    width: 50px;
-    height: 50px;
+    width: 50%;
+    height: 50%;
+
     margin: auto;
     position: absolute;
     left: 0;
     right: 0;
     top: 0;
     bottom: 0;
-    border-radius: 20px;
 
-    perspective: 400px;
-    -webkit-perspective: 400px;
+    perspective: 1000px;
+    -webkit-perspective: 1000px;
 }
 
-.box {
+.cube {
+    font-size: 100px;
+
+    width: 2em;
+    height: 2em;
+
     position: relative;
+    margin: auto;
+
     animation-name: rolling;
     -webkit-animation-name: rolling;
+
     animation-duration: 10s;
     -webkit-animation-duration: 10s;
-    animation-iteration-count: infinite;
 
+    animation-iteration-count: infinite;
     transform-style: preserve-3d;
 }
 
 .face {
-    width: 50px;
-    height: 50px;
+    width: 2em;
+    height: 2em;
     position: absolute;
 
     background-color: #F9F9F8;
@@ -480,43 +489,44 @@ ul {
 
 .face:nth-child(1) {
     background-color: #F9F9F8;
-    transform: translateZ(25px);
-    -webkit-transform: translateZ(25px);
+    transform: translateZ(1em);
+    -webkit-transform: translateZ(1em);
 }
+
 .face:nth-child(2) {
     background-color: #868FBF;
-    transform: rotateX(180deg) translateZ(25px);
-    -webkit-transform: rotateX(180deg) translateZ(25px);
+    transform: rotateX(180deg) translateZ(1em);
+    -webkit-transform: rotateX(180deg) translateZ(1em);
 }
+
 .face:nth-child(3) {
     background-color: #59B2CE;
-    transform: rotateY(-90deg) translateZ(25px);
-    -webkit-transform: rotateY(-90deg) translateZ(25px);
+    transform: rotateY(-90deg) translateZ(1em);
+    -webkit-transform: rotateY(-90deg) translateZ(1em);
 }
+
 .face:nth-child(4) {
     background-color: #CE2535;
-    transform: rotateY(90deg) translateZ(25px);
-    -webkit-transform: rotateY(90deg) translateZ(25px);
+    transform: rotateY(90deg) translateZ(1em);
+    -webkit-transform: rotateY(90deg) translateZ(1em);
 }
+
 .face:nth-child(5) {
     background-color: #D79F52;
-    transform: rotateX(90deg) translateZ(25px);
-    -webkit-transform: rotateX(90deg) translateZ(25px);
+    transform: rotateX(90deg) translateZ(1em);
+    -webkit-transform: rotateX(90deg) translateZ(1em);
 }
+
 .face:nth-child(6) {
     background-color: #EFBCB6;
-    transform: rotateX(-90deg) translateZ(25px);
-    -webkit-transform: rotateX(-90deg) translateZ(25px);
+    transform: rotateX(-90deg) translateZ(1em);
+    -webkit-transform: rotateX(-90deg) translateZ(1em);
 }
 
-
-.box .face>img {
+.face>img {
     width: 100%;
     height: 100%;
 }
-
-
-
 
 /* identity */
 
