--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,4 +1,37 @@
-/* common style */
+/* --- reset style --- */
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+
+body {
+	line-height: 1;
+}
+
+ol, ul {
+	list-style: none;
+}
+
+/* --- reset style --- */
+
+/* --- common style --- */
 
 html, body {
     width: 100%;
@@ -6,28 +39,379 @@ html, body {
     margin: 0;
     padding: 0;
     color: #FFF;
-}
-
-ul {
-    list-style: none;
+    overflow: hidden;
 }
 
 .show {
-    visibility: visible;
+    /*visibility: visible;*/
+    display: block;
 }
 
 .hidden {
-    visibility: hidden;
+    /*visibility: hidden;*/
+    display: none;
 }
 
-/* game container */
+.info {
+    background-color: #70BAA6;
+}
 
-#game {
+.danger {
+    background-color: #ff6550;
+}
+
+.cover {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+}
+
+.animated {
+  -webkit-animation-duration: 1s;
+  animation-duration: 1s;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+}
+
+/* --- common style --- */
+
+/* --- welcome page --- */
+
+/* rolling box */
+
+@keyframes rolling {
+    to {
+        transform: rotate3d(1, 1, 1, 360deg);
+        -webkit-transform: rotate3d(1, 1, 1, 360deg);
+    }
+}
+
+@-webkit-keyframes rolling {
+    to {
+        transform: rotate3d(1, 1, 1, 360deg);
+        -webkit-transform: rotate3d(1, 1, 1, 360deg);
+    }
+}
+
+.contain {
+    perspective: 1000px;
+    -webkit-perspective: 1000px;
+}
+
+.cube {
+    font-size: 80px;
+
+    width: 2em;
+    height: 2em;
+
+    position: relative;
+    margin: 1em auto;
+
+    animation-name: rolling;
+    -webkit-animation-name: rolling;
+
+    animation-duration: 10s;
+    -webkit-animation-duration: 10s;
+
+    animation-iteration-count: infinite;
+    transform-style: preserve-3d;
+}
+
+.face {
+    width: 2em;
+    height: 2em;
+    position: absolute;
+
+    background-color: #F9F9F8;
+
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+
+}
+
+.face:nth-child(1) {
+    background-color: #F9F9F8;
+    transform: translateZ(1em);
+    -webkit-transform: translateZ(1em);
+}
+
+.face:nth-child(2) {
+    background-color: #868FBF;
+    transform: rotateX(180deg) translateZ(1em);
+    -webkit-transform: rotateX(180deg) translateZ(1em);
+}
+
+.face:nth-child(3) {
+    background-color: #59B2CE;
+    transform: rotateY(-90deg) translateZ(1em);
+    -webkit-transform: rotateY(-90deg) translateZ(1em);
+}
+
+.face:nth-child(4) {
+    background-color: #CE2535;
+    transform: rotateY(90deg) translateZ(1em);
+    -webkit-transform: rotateY(90deg) translateZ(1em);
+}
+
+.face:nth-child(5) {
+    background-color: #D79F52;
+    transform: rotateX(90deg) translateZ(1em);
+    -webkit-transform: rotateX(90deg) translateZ(1em);
+}
+
+.face:nth-child(6) {
+    background-color: #EFBCB6;
+    transform: rotateX(-90deg) translateZ(1em);
+    -webkit-transform: rotateX(-90deg) translateZ(1em);
+}
+
+.face>img {
     width: 100%;
     height: 100%;
 }
 
-/* render status */
+/* fade animation */
+
+@-webkit-keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+
+  40% {
+
+    opacity: 0.6;
+  }
+
+  60% {
+    opacity: 1;
+  }
+
+  80% {
+    opacity: 0.5;
+  }
+
+  to {
+    opacity: 0;
+  }
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+
+  40% {
+
+    opacity: 0.6;
+  }
+
+  60% {
+    opacity: 1;
+  }
+
+  80% {
+    opacity: 0.5;
+  }
+
+  to {
+    opacity: 0;
+  }
+}
+
+.fade {
+    -webkit-animation-timing-function: ease-in-out;
+    animation-timing-function: ease-in-out;;
+    animation-iteration-count: infinite;
+    -webkit-animation-name: fadeIn;
+    animation-name: fadeIn;
+}
+
+#welcome {
+    background-color: #263238;
+    text-align: center;
+    font-size: 25px;
+    overflow-y: auto;
+}
+
+#welcome .logo {
+    margin: 2.5em auto;
+}
+
+#welcome .contain {
+    padding-bottom: 1em;
+}
+
+/* --- welcome page --- */
+
+/* --- pause --- */
+
+/* bubles style */
+
+.bubles {
+    width: 100%;
+    height: 100%;
+}
+
+@keyframes floating {
+    0 {
+        transform: translate(0, 0);
+    }
+    50% {
+        transform: translate(0, 40%);
+    }
+    100% {
+        transform: translate(0, 0);
+    }
+}
+
+@-webkit-keyframes floating {
+    0 {
+        transform: translate(0, 0);
+    }
+    50% {
+        transform: translate(0, 40%);
+    }
+    100% {
+        transform: translate(0, 0);
+    }
+}
+
+.bubles circle {
+    animation: floating 1.5s ease infinite;
+    -webkit-animation: floating 1.5s ease infinite;
+}
+
+.bubles circle:nth-child(1) {
+    animation-delay: 0.25s;
+}
+
+.bubles circle:nth-child(2) {
+    animation-delay: 0.5s;
+}
+
+.bubles circle:nth-child(3) {
+    animation-delay: 0.75s;
+}
+
+.bubles circle:nth-child(3) {
+    animation-delay: 1s;
+}
+
+/* flipInY animation */
+
+@-webkit-keyframes flipInY {
+  from {
+    -webkit-transform: perspective(400px) rotateY(90deg);
+    transform: perspective(400px) rotateY(90deg);
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in;
+    opacity: 0;
+  }
+
+  40% {
+    -webkit-transform: perspective(400px) rotateY(-20deg);
+    transform: perspective(400px) rotateY(-20deg);
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in;
+  }
+
+  60% {
+    -webkit-transform: perspective(400px) rotateY(10deg);
+    transform: perspective(400px) rotateY(10deg);
+    opacity: 1;
+  }
+
+  80% {
+    -webkit-transform: perspective(400px) rotateY(-5deg);
+    transform: perspective(400px) rotateY(-5deg);
+  }
+
+  to {
+    -webkit-transform: perspective(400px);
+    transform: perspective(400px);
+  }
+}
+
+@keyframes flipInY {
+  from {
+    -webkit-transform: perspective(400px) rotateY(90deg);
+    transform: perspective(400px) rotateY(90deg);
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in;
+    opacity: 0;
+  }
+
+  40% {
+    -webkit-transform: perspective(400px) rotateY(-20deg);
+    transform: perspective(400px) rotateY(-20deg);
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in;
+  }
+
+  60% {
+    -webkit-transform: perspective(400px) rotateY(10deg);
+    transform: perspective(400px) rotateY(10deg);
+    opacity: 1;
+  }
+
+  80% {
+    -webkit-transform: perspective(400px) rotateY(-5deg);
+    transform: perspective(400px) rotateY(-5deg);
+  }
+
+  to {
+    -webkit-transform: perspective(400px);
+    transform: perspective(400px);
+  }
+}
+
+.flipInY {
+  -webkit-backface-visibility: visible !important;
+  backface-visibility: visible !important;
+  -webkit-animation-name: flipInY;
+  animation-name: flipInY;
+}
+
+#pause {
+    font-size: 20px;
+    text-align: center;
+
+    width: 15em;
+    height: 10em;
+
+    margin: auto;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+
+    border-radius: 1em;
+    padding-top: 2em;
+
+    box-sizing: border-box;
+}
+
+#pause>.icon-pause {
+    font-size: 2.5em;
+}
+
+#pause .bubles {
+    height: 5em;
+}
+
+/* --- pause --- */
+
+/* --- game container --- */
+
+#game {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+
+/* --- render status --- */
 
 #stats {
     position: absolute;
@@ -35,7 +419,7 @@ ul {
     top: 0;
 }
 
-/* money & health */
+/* --- money & health --- */
 
 #points {
     text-align: center;
@@ -70,7 +454,7 @@ ul {
     color: #a1887f;
 }
 
-/* task & bag */
+/* --- task & bag --- */
 
 #tools {
     font-size: 40px;
@@ -323,210 +707,6 @@ ul {
     display: none;
 }
 
-/*.msg.info {*/
-.info {
-    background-color: #009688;
-}
-
-/*.msg.danger {*/
-.danger {
-    background-color: #ff6550;
-}
-
-.animated {
-  -webkit-animation-duration: 1s;
-  animation-duration: 1s;
-  -webkit-animation-fill-mode: both;
-  animation-fill-mode: both;
-}
-
-@-webkit-keyframes flipInY {
-  from {
-    -webkit-transform: perspective(400px) rotateY(90deg);
-    transform: perspective(400px) rotateY(90deg);
-    -webkit-animation-timing-function: ease-in;
-    animation-timing-function: ease-in;
-    opacity: 0;
-  }
-
-  40% {
-    -webkit-transform: perspective(400px) rotateY(-20deg);
-    transform: perspective(400px) rotateY(-20deg);
-    -webkit-animation-timing-function: ease-in;
-    animation-timing-function: ease-in;
-  }
-
-  60% {
-    -webkit-transform: perspective(400px) rotateY(10deg);
-    transform: perspective(400px) rotateY(10deg);
-    opacity: 1;
-  }
-
-  80% {
-    -webkit-transform: perspective(400px) rotateY(-5deg);
-    transform: perspective(400px) rotateY(-5deg);
-  }
-
-  to {
-    -webkit-transform: perspective(400px);
-    transform: perspective(400px);
-  }
-}
-
-@keyframes flipInY {
-  from {
-    -webkit-transform: perspective(400px) rotateY(90deg);
-    transform: perspective(400px) rotateY(90deg);
-    -webkit-animation-timing-function: ease-in;
-    animation-timing-function: ease-in;
-    opacity: 0;
-  }
-
-  40% {
-    -webkit-transform: perspective(400px) rotateY(-20deg);
-    transform: perspective(400px) rotateY(-20deg);
-    -webkit-animation-timing-function: ease-in;
-    animation-timing-function: ease-in;
-  }
-
-  60% {
-    -webkit-transform: perspective(400px) rotateY(10deg);
-    transform: perspective(400px) rotateY(10deg);
-    opacity: 1;
-  }
-
-  80% {
-    -webkit-transform: perspective(400px) rotateY(-5deg);
-    transform: perspective(400px) rotateY(-5deg);
-  }
-
-  to {
-    -webkit-transform: perspective(400px);
-    transform: perspective(400px);
-  }
-}
-
-.flipInY {
-  -webkit-backface-visibility: visible !important;
-  backface-visibility: visible !important;
-  -webkit-animation-name: flipInY;
-  animation-name: flipInY;
-}
-
-#promt {
-    width: 20%;
-    height: 20%;
-    margin: auto;
-    position: absolute;
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
-    border-radius: 20px;
-}
-
-/* rolling box */
-
-@keyframes rolling {
-    to {
-        transform: rotate3d(1, 1, 1, 360deg);
-        -webkit-transform: rotate3d(1, 1, 1, 360deg);
-    }
-}
-
-@-webkit-keyframes rolling {
-    to {
-        transform: rotate3d(1, 1, 1, 360deg);
-        -webkit-transform: rotate3d(1, 1, 1, 360deg);
-    }
-}
-
-.contain {
-    width: 50%;
-    height: 50%;
-
-    margin: auto;
-    position: absolute;
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
-
-    perspective: 1000px;
-    -webkit-perspective: 1000px;
-}
-
-.cube {
-    font-size: 100px;
-
-    width: 2em;
-    height: 2em;
-
-    position: relative;
-    margin: auto;
-
-    animation-name: rolling;
-    -webkit-animation-name: rolling;
-
-    animation-duration: 10s;
-    -webkit-animation-duration: 10s;
-
-    animation-iteration-count: infinite;
-    transform-style: preserve-3d;
-}
-
-.face {
-    width: 2em;
-    height: 2em;
-    position: absolute;
-
-    background-color: #F9F9F8;
-
-    -webkit-backface-visibility: hidden;
-    backface-visibility: hidden;
-
-}
-
-.face:nth-child(1) {
-    background-color: #F9F9F8;
-    transform: translateZ(1em);
-    -webkit-transform: translateZ(1em);
-}
-
-.face:nth-child(2) {
-    background-color: #868FBF;
-    transform: rotateX(180deg) translateZ(1em);
-    -webkit-transform: rotateX(180deg) translateZ(1em);
-}
-
-.face:nth-child(3) {
-    background-color: #59B2CE;
-    transform: rotateY(-90deg) translateZ(1em);
-    -webkit-transform: rotateY(-90deg) translateZ(1em);
-}
-
-.face:nth-child(4) {
-    background-color: #CE2535;
-    transform: rotateY(90deg) translateZ(1em);
-    -webkit-transform: rotateY(90deg) translateZ(1em);
-}
-
-.face:nth-child(5) {
-    background-color: #D79F52;
-    transform: rotateX(90deg) translateZ(1em);
-    -webkit-transform: rotateX(90deg) translateZ(1em);
-}
-
-.face:nth-child(6) {
-    background-color: #EFBCB6;
-    transform: rotateX(-90deg) translateZ(1em);
-    -webkit-transform: rotateX(-90deg) translateZ(1em);
-}
-
-.face>img {
-    width: 100%;
-    height: 100%;
-}
 
 /* identity */
 
@@ -544,49 +724,6 @@ ul {
     height: 60px;
     border-radius: 50%;
     vertical-align: middle;
-}
-
-/* loading style */
-
-#loading {
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    margin: auto;
-    width: 100%;
-    height: 100%;
-    background-color: #263238;
-    display: block;
-}
-
-@keyframes load-circle {
-    0 {
-        transform: translate(0, 0);
-    }
-    50% {
-        transform: translate(0, 40%);
-    }
-    100% {
-        transform: translate(0, 0);
-    }
-}
-
-#loading circle {
-    animation: load-circle 1.4s linear infinite;
-}
-
-#loading circle:nth-child(1) {
-    animation-delay: 0.25s;
-}
-
-#loading circle:nth-child(2) {
-    animation-delay: 0.5s;
-}
-
-#loading circle:nth-child(3) {
-    animation-delay: 0.75s;
 }
 
 #music {
