--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('/fonts/icomoon.eot?edqsck');
-  src:  url('/fonts/icomoon.eot?edqsck#iefix') format('embedded-opentype'),
-    url('/fonts/icomoon.ttf?edqsck') format('truetype'),
-    url('/fonts/icomoon.woff?edqsck') format('woff'),
-    url('/fonts/icomoon.svg?edqsck#icomoon') format('svg');
+  src:  url('/fonts/icomoon.eot?lh3sj4');
+  src:  url('/fonts/icomoon.eot?lh3sj4#iefix') format('embedded-opentype'),
+    url('/fonts/icomoon.ttf?lh3sj4') format('truetype'),
+    url('/fonts/icomoon.woff?lh3sj4') format('woff'),
+    url('/fonts/icomoon.svg?lh3sj4#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -27,6 +27,9 @@
 .icon-check_circle:before {
   content: "\e86c";
 }
+.icon-colorize:before {
+  content: "\e3b8";
+}
 .icon-date_range:before {
   content: "\e916";
 }
@@ -47,6 +50,12 @@
 }
 .icon-heart:before {
   content: "\e904";
+}
+.icon-pause:before {
+  content: "\e903";
+}
+.icon-eyedropper:before {
+  content: "\e90a";
 }
 .icon-reply:before {
   content: "\e905";
